--- a/Views/Cards/Main.cshtml
+++ b/Views/Cards/Main.cshtml
@@ -18,25 +18,25 @@
             </div>
             <div class="col-8">
                 <nav class="menu">
-                    <a href="">Show Rules</a>
-                    <a href="">Music</a>
+                    <div class="main-menu">Show Rules</div>
+                    <div class="main-menu">Music</div>
                     <div class="submenu clearfix music">
                         <div class="sub-item">On</div>
                         <div class="sub-item">Off</div>
                     </div>
-                    <a href="">Game Speed</a>
+                    <div class="main-menu">Game Speed</div>
                     <div class="submenu clearfix game-speed">
                         <div class="sub-item">Slow</div>
                         <div class="sub-item">Normal</div>
                         <div class="sub-item">Fast</div>
                     </div>
-                    <a href="">Chat</a>
+                    <div class="main-menu">Chat</div>
                     <div class="submenu clearfix taunt">
                         <div class="sub-item">None</div>
                         <div class="sub-item">Shakespear</div>
                         <div class="sub-item">Monty Python</div>
                     </div>
-                    <a href="">New Game</a>
+                    <div class="main-menu">New Game</div>
                 </nav>
             </div>
         </div>
