--- a/wwwroot/styles/helpers/_menu.scss
+++ b/wwwroot/styles/helpers/_menu.scss
@@ -2,7 +2,7 @@ nav.menu{
     border-bottom: 1px solid $white;
     margin-left: 190px;
     position: relative;
-    a{
+    .main-menu{
         color: white;
         padding: 10px 15px 17px 15px;
         text-decoration: none;
