--- a/wwwroot/styles/base.css
+++ b/wwwroot/styles/base.css
@@ -325,7 +325,7 @@ nav.menu {
   border-bottom: 1px solid white;
   margin-left: 190px;
   position: relative; }
-  nav.menu a {
+  nav.menu .main-menu {
     color: white;
     padding: 10px 15px 17px 15px;
     text-decoration: none;
@@ -333,7 +333,7 @@ nav.menu {
     line-height: 1em;
     display: inline-block;
     font-size: 1em; }
-    nav.menu a:hover {
+    nav.menu .main-menu:hover {
       color: rgba(5, 28, 55, 0.8);
       background-color: white;
       text-decoration: none; }
