--- a/wwwroot/styles/base.css
+++ b/wwwroot/styles/base.css
@@ -371,7 +371,8 @@ nav.menu {
     left: 146px;
     display: none; }
   nav.menu div.taunt {
-    left: 169px; }
+    left: 169px;
+    display: none; }
 
 .container {
   background-color: #657a64;
