resync with master

--- a/Views/Cards/Main.cshtml
+++ b/Views/Cards/Main.cshtml
@@ -1,5 +1,6 @@
 <!-- insert head -->
 @await Html.PartialAsync("Head.cshtml")
+<script src="~/js/main.js"></script>
 <!-- end insert head -->
 <div class="container">
     <div class="header">
@@ -88,7 +89,7 @@
                 <div class="col-12 sidebar">
                     <div class="sidebar-buffer bubble-border">
                         <div class="mx-auto">
-                            <button class="button gbg-button btn-sm" id="PlayGame">Play</button><button class="button gbg-button btn-sm" id="NextRound">NextRound</button>
+                            <button class="button gbg-button btn-sm" id="NextRound">NextRound</button>
                         </div>
                     </div>
                 </div>
@@ -102,59 +103,6 @@
                         <!-- START OF ONE HAND -->
                         <!-- END OF HAND  --><!-- START OF ONE HAND -->
 
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12">
-            <div class="rules bubble-border">
-                <div class="row">
-                    <div class="col-12">
-                        <h2>Objective:</h2>
-                        <p>The goal is to obtain a hand that totals 31 in cards of one suit; or to have a hand at the showdown whose count in one suit is higher than that of any other player.</p>
-                        <h2>Card Values/Scoring</h2>
-                        <p>An Ace counts 11 points, face cards count 10 points, and all other cards count their face value</p>
-                        <h2>The Play:</h2>
-                        <p>All players begin with 3 chips. On each turn, players take one card from either the top of the deck or from the widow (aka the discard pile). A turn ends by discarding a card from their hand.</p>
-                        <p>Players take turns, until one player is satisfied that the card values he holds will likely beat all other players and "knocks" on the table. Once a knock has been made, all other players get one more turn to exchange cards before the showdown where all players reveal their hands and compare values.</p>
-                        <h2>Scoring:</h2>
-                        <p>If the player who knocked does not have the highest scoring hand at the showdown, they lose a chip to the pot.  However, if they do have the highest scoring hand, the player with the lowest hand loses a chip to the pot instead.</p>
-                        <p>If there is a tie for the highest score, the player with the highest-ranking card wins. Example: K, Q, 6 (total 26) would beat Q, 9, 7 (also total 26). If there is a tie in the highest cards, the next highest cards are compared, and so on.</p>
-                        <p>If at any point a player holds exactly 31 points during the game, or obtains three aces, the game immediately ends and all other players lose a chip to the pot.</p>
-                        <p>After the pot has been won, all the players put in chips for the next hand.</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="sidebar-rules">
-                            <h2>31 TLDR Rules:</h2>
-                            <div class="row">
-                                <div class="col-6">
-                                    <ul>
-                                        <li>Try to total 31 points</li>
-                                        <li>Aces are worth 11 points</li>
-                                        <li>10-K are worth 10 points</li>
-                                    </ul>
-                                </div>
-                                <div class="col-6">
-                                    <ul>
-                                        <li>Choose Cards in the same suit</li>
-                                        <li>Knock when you think you can beat everyone's hand value</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 clearfix">
-                        <div class="float-right">
-                    <!-- add transition here -->
-                            <button>Got it! Let's Play!</button>
-                        </div>
-                        <div class="clearfix"></div>
                     </div>
                 </div>
             </div>
@@ -175,6 +123,65 @@
                         <li>dupe all of the dom structure inside and including "shadow-content-container"</li>
                         <li>profit</li>
                     </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Change of Turn Indication for human players -->
+<div class="shadowbox" id="game_rules_shadow_box">
+</div>
+<div class="shadow-content-container game_rules" id="game_rules">
+    <div class="inner-shadow">
+        <div class="row">
+            <div class="col-12">
+                <div class="rules bubble-border">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2>Objective:</h2>
+                            <p>The goal is to obtain a hand that totals 31 in cards of one suit; or to have a hand at the showdown whose count in one suit is higher than that of any other player.</p>
+                            <h2>Card Values/Scoring</h2>
+                            <p>An Ace counts 11 points, face cards count 10 points, and all other cards count their face value</p>
+                            <h2>The Play:</h2>
+                            <p>All players begin with 3 chips. On each turn, players take one card from either the top of the deck or from the widow (aka the discard pile). A turn ends by discarding a card from their hand.</p>
+                            <p>Players take turns, until one player is satisfied that the card values he holds will likely beat all other players and "knocks" on the table. Once a knock has been made, all other players get one more turn to exchange cards before the showdown where all players reveal their hands and compare values.</p>
+                            <h2>Scoring:</h2>
+                            <p>If the player who knocked does not have the highest scoring hand at the showdown, they lose a chip to the pot.  However, if they do have the highest scoring hand, the player with the lowest hand loses a chip to the pot instead.</p>
+                            <p>If there is a tie for the highest score, the player with the highest-ranking card wins. Example: K, Q, 6 (total 26) would beat Q, 9, 7 (also total 26). If there is a tie in the highest cards, the next highest cards are compared, and so on.</p>
+                            <p>If at any point a player holds exactly 31 points during the game, or obtains three aces, the game immediately ends and all other players lose a chip to the pot.</p>
+                            <p>After the pot has been won, all the players put in chips for the next hand.</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="sidebar-rules">
+                                <h2>31 TLDR Rules:</h2>
+                                <div class="row">
+                                    <div class="col-6">
+                                        <ul>
+                                            <li>Try to total 31 points</li>
+                                            <li>Aces are worth 11 points</li>
+                                            <li>10-K are worth 10 points</li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-6">
+                                        <ul>
+                                            <li>Choose Cards in the same suit</li>
+                                            <li>Knock when you think you can beat everyone's hand value</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 clearfix">
+                            <div class="float-right">
+                        <!-- add transition here -->
+                        <button class="button gbg-button btn-sm" id="PlayGame">Got it, let's play!</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
