Mostly working navbar functionality

--- a/Views/Cards/Main.cshtml
+++ b/Views/Cards/Main.cshtml
@@ -19,22 +19,22 @@
             <div class="col-8">
                 <nav class="menu">
                     <div class="main-menu">Show Rules</div>
-                    <div class="main-menu">Music</div>
+                    <div class="main-menu" id="music">Music</div>
                     <div class="submenu clearfix music">
-                        <div class="sub-item">On</div>
-                        <div class="sub-item">Off</div>
+                        <div class="sub-item" id="music-on">On</div>
+                        <div class="sub-item" id="music-off">Off</div>
                     </div>
-                    <div class="main-menu">Game Speed</div>
+                    <div class="main-menu" id="game-speed">Game Speed</div>
                     <div class="submenu clearfix game-speed">
-                        <div class="sub-item">Slow</div>
-                        <div class="sub-item">Normal</div>
-                        <div class="sub-item">Fast</div>
+                        <div class="sub-item" id="speed-slow">Slow</div>
+                        <div class="sub-item" id="speed-normal">Normal</div>
+                        <div class="sub-item" id="speed-fast">Fast</div>
                     </div>
-                    <div class="main-menu">Chat</div>
+                    <div class="main-menu" id="taunt">Chat</div>
                     <div class="submenu clearfix taunt">
-                        <div class="sub-item">None</div>
-                        <div class="sub-item">Shakespear</div>
-                        <div class="sub-item">Monty Python</div>
+                        <div class="sub-item" id="taunt-off">None</div>
+                        <div class="sub-item" id="taunt-shakespear">Shakespear</div>
+                        <div class="sub-item" id="taunt-mp">Monty Python</div>
                     </div>
                     <div class="main-menu">New Game</div>
                 </nav>
@@ -195,3 +195,11 @@ most likely it will be positioning with a left of +40ish from where it calls it.
     <div class="bubble-arrow"></div>
     <div class="text" id="taunt-text">text from taunt here</div>
 </div>
+
+
+<!-- JUSTIN MAKE THIS AN ERROR WINDOW! *please -->
+<!-- <div class="taunt-bubble">
+    <div class="bdr-arrow"></div>
+    <div class="bubble-arrow"></div>
+    <div class="text" id="taunt-text">text from taunt here</div>
+</div> -->
