fixed merge loss of shadowbox for player turn change

--- a/Views/Cards/Main.cshtml
+++ b/Views/Cards/Main.cshtml
@@ -119,6 +119,11 @@
     </div>
 </div>
 <!-- Change of Turn Indication for human players -->
+<div class="shadowbox" id="change_turn_shadow_box">
+</div>
+<div class="shadow-content-container" id="change_turn">
+</div>
+<!-- game rules shadowbox -->
 <div class="shadowbox" id="game_rules_shadow_box">
 </div>
 <div class="shadow-content-container game-rules" id="game_rules">
