--- a/Views/Cards/Main.cshtml
+++ b/Views/Cards/Main.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="col-8">
                 <nav class="menu">
-                    <div class="main-menu">Show Rules</div>
+                    <div class="main-menu" id="show_rules_menu">Show Rules</div>
                     <div class="main-menu" id="music">Music</div>
                     <div class="submenu clearfix music">
                         <div class="sub-item" id="music-on">On</div>
@@ -158,6 +158,46 @@
         </div>
     </div>
 </div>
+<!-- Show Rules -->
+
+<div class="shadowbox" id="menu_rules_shadow_box">
+</div>
+<div class="shadow-content-container game-rules" id="menu_rules">
+    <button class="button" id="close_menu_rules">X</button>
+    <div class="inner-shadow">
+        <div class="row">
+            <div class="col-12">
+                <div class="rules bubble-border">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2>Objective:</h2>
+                            <p>The goal is to obtain a suited-hand that totals 31 points, or to have a hand of higher value than all other players at the showdown.</p>
+                            <h2>Play:</h2>
+                            <p>All players begin with 3 chips. On each turn, players take one card from either the top of the deck or from the discard pile. A turn ends by discarding a card.</p>
+                            <p>Players take turns until one player is satisfied that the cards they hold will likely beat all other players and "knocks" on the table. Once a knock has been made, all other players get one more turn to exchange cards before the showdown where all players reveal their hands and compare values.</p>
+                            <h2>Scoring:</h2>
+                            <p>Aces: 11 points; Face-cards :10 points; all other cards count their face value</p>
+                            <p>If the player who knocked does not have the highest scoring hand at the showdown, they lose a chip to the pot.  However, if they do have the highest scoring hand, the player with the lowest hand loses a chip to the pot instead.</p>
+                            <p>If there is a tie for the highest score, the player with the highest-ranking card(s) wins. [e.g. K, Q, 6 (total 26) would beat Q, 9, 7 (also 26)]</p>
+                            <p>If at any point a player holds exactly 31 points during the game, or obtains three aces (worth 32 points), the game immediately ends and all other players lose a chip to the pot.</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 clearfix">
+                            <div class="float-right">
+                                <button class="button" id="big_close_menu_rules">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<!-- Taunt bubbles -->
 <div class="taunt-bubble" id="taunt-bubble">
     <div class="bdr-arrow"></div>
     <div class="bubble-arrow"></div>
