--- a/wwwroot/styles/base.scss
+++ b/wwwroot/styles/base.scss
@@ -23,35 +23,38 @@ body{
 // Player Select Page
 .player-select{
 
-    .player-change{
-        margin: 10px 0;
-        cursor: pointer;
-        font-weight: 600;
-        font-size: 1.1em;
-        &:hover{
-            text-shadow: 2px 2px 2px #999;
+    .f-wrap{
+        padding: 30px 50px 50px 50px;
+        .player-change{
+            margin: 10px 0;
+            cursor: pointer;
+            font-weight: 600;
+            font-size: 1.1em;
+            &:hover{
+                text-shadow: 2px 2px 2px #999;
+            }
+            &:active{
+                text-shadow: 1px 1px 3px $black;
+            }
         }
-        &:active{
-            text-shadow: 1px 1px 3px $black;
+        p.sm-fz{
+            font-size: 0.7em;
         }
-    }
-    .remove{
-        text-align: right;
-    }
-    .specific-spacer{
-        margin-top: 15px;
-        padding: 0 0 0 27px;
+        .remove{
+            text-align: right;
+        }
+        .specific-spacer{
+            margin-top: 15px;
+            padding: 0 0 0 27px;
+        }
     }
 }
-
-$hun: 226;
-$dun: 112;
 
 
 // Main Play Page
 .container{
     background-color: $t-green;
-    background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
+    background-image: url("/img/bg-fabric.png");
     padding: 0 20px 20px 20px;
     color: $white;
     border: 5px solid $b-blue;
@@ -90,6 +93,8 @@ $dun: 112;
         }
         .deck-area{
             position: relative;
+            .discard-img{
+            }
             h5.deck-label{
                 margin: 30px 0 10px 0;
             }
@@ -100,7 +105,9 @@ $dun: 112;
                 height: 82px;
                 width: 58px;
                 border: 2px dotted $b-blue;
+                box-shadow: 2px 2px 5px #777;
                 z-index: 50;
+
             }
             .discard-x{
                 position: absolute;
@@ -125,7 +132,11 @@ $dun: 112;
                 top: 0px;
                 left: 0px;
                 z-index: 55;
-                transform: rotate(-5deg)
+                transform: rotate(-5deg);
+                &:hover{
+                    transform: rotate(-2deg);
+                    left: -1px;
+                }
             }
             .shift1{
                 position: absolute;
@@ -178,9 +189,90 @@ $dun: 112;
                 position: relative;
                 overflow: hidden;
                 .hand-labels{
+                    position: relative;
+
                     h3{
                         font-size: 1.3em;
                     }
+                    // horizontal by cards
+                    .chip-box{
+                        position: absolute;
+                        top: 140px;
+                        left: 68px;
+                        &:hover{
+                            .chip{
+
+                            }
+                        }
+                        @keyframes spin {
+                            from {
+                                transform:rotate(0deg);
+                            }
+                            to {
+                                transform:rotate(360deg);
+                            }
+                        }
+                        @keyframes flip {
+                            from {
+                                transform:rotatey(0deg);
+                            }
+                            to {
+                                transform:rotatey(360deg);
+                            }
+                        }
+                        .chip{
+                            background-image: url("/img/blue-chip.png") ;
+                            background-size: 35px 35px;
+                            max-width: 35px;
+                            width: 35px;
+                            max-height: 35px;
+                            height: 35px;
+                            position: absolute;
+                            top: 0px;
+                            left: 25px;
+                            &:hover{
+                                animation-name: spin;
+                                // animation-duration: 1000ms;
+                                animation-duration: 3000ms;
+                                animation-iteration-count: infinite;
+                                animation-timing-function: linear;
+                            }
+                        }
+                        .chip:nth-child(2){
+                            left: 45px;
+                            background-image: url("/img/green-chip.png") ;
+                        }
+                        .chip:nth-child(3){
+                            left: 65px;
+                            background-image: url("/img/red-chip.png") ;
+                        }
+                    }
+                    // sideways by buttons
+                    // .chip-box{
+                    //     position: absolute;
+                    //     top:40px;
+                    //     left: 20px;
+
+                    //     .chip{
+                    //         background-image: url("/img/blue-chip.png") ;
+                    //         background-size: 35px 35px;
+                    //         max-width: 35px;
+                    //         width: 35px;
+                    //         max-height: 35px;
+                    //         height: 35px;
+                    //         position: absolute;
+                    //         left: 0px;
+                    //         top: 25px;
+                    //     }
+                    //     .chip:nth-child(2){
+                    //         top: 45px;
+                    //         background-image: url("/img/green-chip.png") ;
+                    //     }
+                    //     .chip:nth-child(3){
+                    //         top: 65px;
+                    //         background-image: url("/img/red-chip.png") ;
+                    //     }
+                    // }
                 }
                 .hand-buttons{
                     .turn-indicator{
