--- a/Views/Cards/PlayerSelect.cshtml
+++ b/Views/Cards/PlayerSelect.cshtml
@@ -19,9 +19,11 @@
     </div>
     <div class="row">
         <div class="col-12">
-            <div class="mx-auto w-50 p-5 bubble-border">
+            <div class="mx-auto w-50 bubble-border f-wrap">
                 <form class="" action="players" method="post">
                     <div id="PlayerForm">
+                        <h2 class="tac">Create your players!</h2>
+                        <p class="sm-fz tac">Leave field empty for computer players.</p>
                         <div class="form-group" id="player1">
                             <p>Player 1 Name:</p>
                             <input type="text" class="form-control ml-2" name="player1"  placeholder="...">
