Extra taunt window

--- a/Views/Cards/Main.cshtml
+++ b/Views/Cards/Main.cshtml
@@ -201,13 +201,18 @@
 <div class="taunt-bubble" id="taunt-bubble">
     <div class="bdr-arrow"></div>
     <div class="bubble-arrow"></div>
-    <div class="text" id="taunt-text">text from taunt here</div>
+    <div class="text" id="taunt-text"></div> <!-- text for taunt goes in this line -->
 </div>
 
+<div class="taunt-bubble" id="taunt-bubble-extra">
+    <div class="bdr-arrow"></div>
+    <div class="bubble-arrow"></div>
+    <div class="text" id="taunt-text-extra"></div> <!-- text for taunt goes in this line -->
+</div>
 
 
 <div class="taunt-bubble red-text" id="error">
     <div class="bdr-arrow"></div>
     <div class="bubble-arrow"></div>
-    <div class="text" id="error-text">text from error here</div>
+    <div class="text" id="error-text"></div>
 </div>
