desktop only support functional on landing page

--- a/Views/Cards/PlayerSelect.cshtml
+++ b/Views/Cards/PlayerSelect.cshtml
@@ -55,3 +55,19 @@
         </div>
     </div>
 </div>
+
+<!-- Mobile not supported -->
+<div class="shadowbox" id="mobile_viewer_shadow_box">
+</div>
+<div class="shadow-content-container" id="mobile_viewer">
+    <div class="inner-shadow">
+        <div class="bubble-border">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="tac">Desktop Support Only</h2>
+                      <p>Sorry, this website cannot be viewed from a mobile device. Please check us out from a laptop or desktop computer!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
